// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert/> should match snapshot, when isOpen is falsy snapshot should be null regardless of alert type 1`] = `null`;

exports[`<Alert/> should match snapshot, when isOpen is truthy type is danger 1`] = `
<div
  aria-describedby="alert-message"
  aria-hidden={false}
  className="AlertStyle__AlertContainer-fcjw72-0 hJPEX aries-alert"
  data-open={true}
  data-type="danger"
  onKeyDown={[Function]}
  role="alertdialog"
  tabIndex={0}
>
  <div
    className="AlertStyle__AlertIcon-fcjw72-1 iufUzP"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#EC272B"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M54.928 54.928V24.88h-9.856v30.048h9.856zm0 20.192V65.024h-9.856V75.12h9.856zM50 0c9.135 0 17.588 2.284 25.36 6.851 7.533 4.327 13.462 10.256 17.789 17.788C97.716 32.412 100 40.865 100 50c0 9.135-2.284 17.588-6.851 25.36-4.327 7.533-10.256 13.462-17.788 17.789C67.588 97.716 59.135 100 50 100c-9.135 0-17.588-2.284-25.36-6.851C17.106 88.742 11.177 82.772 6.85 75.24 2.284 67.468 0 59.055 0 50s2.284-17.468 6.851-25.24C11.258 17.228 17.228 11.258 24.76 6.85 32.532 2.284 40.945 0 50 0z"
      />
    </svg>
  </div>
  <div
    className="AlertStyle__AlertMessage-fcjw72-2 daCdpN alert-message"
  >
    You have successfully applied to Glints as Software Engineer.
  </div>
  <div
    aria-label="Press Escape or Enter button to close alert"
    className="AlertStyle__AlertClose-fcjw72-3 eUeiSL alert-close"
    onClick={[MockFunction]}
    role="button"
    title="Close alert"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#666666"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Alert/> should match snapshot, when isOpen is truthy type is info 1`] = `
<div
  aria-describedby="alert-message"
  aria-hidden={false}
  className="AlertStyle__AlertContainer-fcjw72-0 hJPEX aries-alert"
  data-open={true}
  data-type="info"
  onKeyDown={[Function]}
  role="alertdialog"
  tabIndex={0}
>
  <div
    className="AlertStyle__AlertIcon-fcjw72-1 iufUzP"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#017EB7"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M99.997 49.33c.148 13.839-4.576 25.668-14.174 35.49-9.597 9.82-21.315 14.879-35.153 15.177-13.839.148-25.668-4.576-35.49-14.174C5.36 76.226.302 64.508.004 50.67-.145 36.83 4.58 25.002 14.177 15.18 23.774 5.36 35.492.302 49.33.004 63.17-.145 74.998 4.58 84.82 14.177c9.82 9.597 14.879 21.315 15.177 35.153zM55.134 19.868c-1.34-1.34-3.05-2.009-5.134-2.009-2.083 0-3.794.67-5.134 2.01-1.339 1.338-2.008 3.05-2.008 5.133s.67 3.794 2.008 5.133c1.34 1.34 3.05 2.01 5.134 2.01 2.083 0 3.794-.67 5.134-2.01 1.339-1.339 2.008-3.05 2.008-5.133s-.67-3.795-2.008-5.134zm4.687 61.157v-2.456h-4.91V40.18H40.178v2.679h4.91v35.711h-4.91v2.456h19.642z"
      />
    </svg>
  </div>
  <div
    className="AlertStyle__AlertMessage-fcjw72-2 daCdpN alert-message"
  >
    You have successfully applied to Glints as Software Engineer.
  </div>
  <div
    aria-label="Press Escape or Enter button to close alert"
    className="AlertStyle__AlertClose-fcjw72-3 eUeiSL alert-close"
    onClick={[MockFunction]}
    role="button"
    title="Close alert"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#666666"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Alert/> should match snapshot, when isOpen is truthy type is not a predefined type 1`] = `
<div
  aria-describedby="alert-message"
  aria-hidden={false}
  className="AlertStyle__AlertContainer-fcjw72-0 hJPEX aries-alert"
  data-open={true}
  data-type="xxx"
  onKeyDown={[Function]}
  role="alertdialog"
  tabIndex={0}
>
  <div
    className="AlertStyle__AlertIcon-fcjw72-1 iufUzP"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#017EB7"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M99.997 49.33c.148 13.839-4.576 25.668-14.174 35.49-9.597 9.82-21.315 14.879-35.153 15.177-13.839.148-25.668-4.576-35.49-14.174C5.36 76.226.302 64.508.004 50.67-.145 36.83 4.58 25.002 14.177 15.18 23.774 5.36 35.492.302 49.33.004 63.17-.145 74.998 4.58 84.82 14.177c9.82 9.597 14.879 21.315 15.177 35.153zM55.134 19.868c-1.34-1.34-3.05-2.009-5.134-2.009-2.083 0-3.794.67-5.134 2.01-1.339 1.338-2.008 3.05-2.008 5.133s.67 3.794 2.008 5.133c1.34 1.34 3.05 2.01 5.134 2.01 2.083 0 3.794-.67 5.134-2.01 1.339-1.339 2.008-3.05 2.008-5.133s-.67-3.795-2.008-5.134zm4.687 61.157v-2.456h-4.91V40.18H40.178v2.679h4.91v35.711h-4.91v2.456h19.642z"
      />
    </svg>
  </div>
  <div
    className="AlertStyle__AlertMessage-fcjw72-2 daCdpN alert-message"
  >
    You have successfully applied to Glints as Software Engineer.
  </div>
  <div
    aria-label="Press Escape or Enter button to close alert"
    className="AlertStyle__AlertClose-fcjw72-3 eUeiSL alert-close"
    onClick={[MockFunction]}
    role="button"
    title="Close alert"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#666666"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Alert/> should match snapshot, when isOpen is truthy type is success 1`] = `
<div
  aria-describedby="alert-message"
  aria-hidden={false}
  className="AlertStyle__AlertContainer-fcjw72-0 hJPEX aries-alert"
  data-open={true}
  data-type="success"
  onKeyDown={[Function]}
  role="alertdialog"
  tabIndex={0}
>
  <div
    className="AlertStyle__AlertIcon-fcjw72-1 iufUzP"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#008464"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M50 100C22.386 100 0 77.614 0 50S22.386 0 50 0s50 22.386 50 50-22.386 50-50 50zM38.823 63.644L23.206 48.038 18 53.329l20.823 20.809 44.878-44.846L78.406 24 38.823 63.644z"
      />
    </svg>
  </div>
  <div
    className="AlertStyle__AlertMessage-fcjw72-2 daCdpN alert-message"
  >
    You have successfully applied to Glints as Software Engineer.
  </div>
  <div
    aria-label="Press Escape or Enter button to close alert"
    className="AlertStyle__AlertClose-fcjw72-3 eUeiSL alert-close"
    onClick={[MockFunction]}
    role="button"
    title="Close alert"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#666666"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Alert/> should match snapshot, when isOpen is truthy type is warning 1`] = `
<div
  aria-describedby="alert-message"
  aria-hidden={false}
  className="AlertStyle__AlertContainer-fcjw72-0 hJPEX aries-alert"
  data-open={true}
  data-type="warning"
  onKeyDown={[Function]}
  role="alertdialog"
  tabIndex={0}
>
  <div
    className="AlertStyle__AlertIcon-fcjw72-1 iufUzP"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#F5A623"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M54.928 54.928V24.88h-9.856v30.048h9.856zm0 20.192V65.024h-9.856V75.12h9.856zM50 0c9.135 0 17.588 2.284 25.36 6.851 7.533 4.327 13.462 10.256 17.789 17.788C97.716 32.412 100 40.865 100 50c0 9.135-2.284 17.588-6.851 25.36-4.327 7.533-10.256 13.462-17.788 17.789C67.588 97.716 59.135 100 50 100c-9.135 0-17.588-2.284-25.36-6.851C17.106 88.742 11.177 82.772 6.85 75.24 2.284 67.468 0 59.055 0 50s2.284-17.468 6.851-25.24C11.258 17.228 17.228 11.258 24.76 6.85 32.532 2.284 40.945 0 50 0z"
      />
    </svg>
  </div>
  <div
    className="AlertStyle__AlertMessage-fcjw72-2 daCdpN alert-message"
  >
    You have successfully applied to Glints as Software Engineer.
  </div>
  <div
    aria-label="Press Escape or Enter button to close alert"
    className="AlertStyle__AlertClose-fcjw72-3 eUeiSL alert-close"
    onClick={[MockFunction]}
    role="button"
    title="Close alert"
  >
    <svg
      className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
      data-testid="icon-svg"
      fill="#666666"
      height="1em"
      viewBox="0 0 100 100"
      width="1em"
    >
      <path
        d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
      />
    </svg>
  </div>
</div>
`;
